--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 
 		The value might be either "development" (reloading when templates change) or 
 		"deployment". If no configuration is found, "development" is the default. -->
-    <context-param>
+    <!--context-param>
         <param-name>context-root</param-name>
         <param-value>gs</param-value>
     </context-param>
@@ -26,5 +26,5 @@
     <filter-mapping>
         <filter-name>wicket.gs</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping -->
 </web-app>
