updated persistence.xml to access embedded hsqldb added hsqldb version 2.6 to the dependency path.  Set the path for the hsqldb local path to gsdb in the application folder.

--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,12 @@
             <version>3.11.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.6.0</version>
+            <classifier>debug</classifier>
+        </dependency>
     </dependencies>
     <build>
         <resources>
