--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <version.jakartaee>8.0.0</version.jakartaee>
         <environment>noenv</environment>
         <version.payara>5.201</version.payara>
+        <version.payara.micro>5.2020.7</version.payara.micro>
     </properties>
     <dependencies>
         <!--  WICKET DEPENDENCIES -->
@@ -184,6 +185,7 @@
             <version>3.11.1</version>
             <scope>test</scope>
         </dependency>
+       
     </dependencies>
     <build>
         <resources>
@@ -293,8 +295,8 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <payaraVersion>${version.payara}</payaraVersion>
-                    <deployWar>false</deployWar>
+                    <payaraVersion>${version.payara.micro}</payaraVersion>
+                    <deployWar>true</deployWar>
                     <commandLineOptions>
                         <option>
                             <key>--autoBindHttp</key>
@@ -303,9 +305,14 @@
                             <key>--deploy</key>
                             <value>${project.build.directory}/${project.build.finalName}</value>
                         </option>
+                        <option>
+                            <key>--port</key>
+                            <value>${web.port}</value>
+                        </option>
                     </commandLineOptions>
                 </configuration>
-                <version>1.3.0</version>
+                <version>1.2.0</version>
+                
             </plugin>
         </plugins>
     </build>
@@ -317,12 +324,14 @@
             </activation>
             <properties>
                 <environment>dev</environment>
+                <web.port>8080</web.port>
             </properties>
         </profile>
         <profile>
             <id>prod</id>
             <properties>
                 <environment>prod</environment>
+                <web.port>8080</web.port>
             </properties>
         </profile>
     </profiles>
