--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.22.2</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>jakarta.platform</groupId>
