--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://www.oracle.com/webfolder/technetwork/jsc/xml/ns/javaee/web-app_3_1.xsd">
+<web-app version="4.0" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://www.oracle.com/webfolder/technetwork/jsc/xml/ns/javaee/web-app_4_0.xsd">
     <display-name>gs</display-name>
     <!--
     There are three means to configure Wickets configuration mode and they 
@@ -27,28 +27,21 @@
         <filter-name>wicket.gs</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping -->
+    <session-config>
+        <session-timeout>20</session-timeout>
+    </session-config>
     <resource-ref>
         <description>Datasource for embeded db</description>
         <res-ref-name>jdbc/gsDataSource</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Application</res-auth>
         <res-sharing-scope>Unshareable</res-sharing-scope>
-    
         <!--properties>
             <property name="driverClassName" value="org.h2.Driver"/>
             <property name="url" value="jdbc:h2:file:h2\db"/>
             <property name="username" value="sa"/>
             <property name="password" value=""/>
-        
-        </properties-->
-        
-    </resource-ref>
-    <data-source>
 
-        <name>jdbc/gsDataSource</name>
-        <!--class-name>org.hsqldb.jdbcDriver</class-name-->
-        <!--url>jdbc:hsqldb:file:./gsdb</url-->
-        <user>sa</user>
-        <password>""</password>
-    </data-source>
+        </properties-->
+    </resource-ref>
 </web-app>
