--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
         <environment>noenv</environment>
         <version.payara>5.201</version.payara>
         <version.payara.micro>5.2021.4</version.payara.micro>
+        <version.postgresql>9.1-901.jdbc4</version.postgresql>
     </properties>
     <dependencies>
         <!--  WICKET DEPENDENCIES -->
@@ -101,11 +102,11 @@
             <scope>test</scope>
         </dependency>
         <!--dependency>
-        <-groupId>org.junit.vintage</groupId>
-         <artifactId>junit-vintage-engine</artifactId>
-         <version>${junit.version}</version>
-         <scope>test</scope>
-            </dependency-->
+    <-groupId>org.junit.vintage</groupId>
+     <artifactId>junit-vintage-engine</artifactId>
+     <version>${junit.version}</version>
+     <scope>test</scope>
+        </dependency-->
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -242,7 +243,7 @@
             <version>2.2.6</version>
             <scope>test</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
@@ -253,6 +254,11 @@
             <groupId>org.apache.wicket</groupId>
             <artifactId>wicket-cdi</artifactId>
             <version>9.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${version.postgresql}</version>
         </dependency>
     </dependencies>
     <build>
@@ -380,7 +386,7 @@
                         </option>
                     </commandLineOptions>
                 </configuration>
-                <version>1.3.0</version>
+                <version>1.4.0</version>
 
             </plugin>
         </plugins>
@@ -394,6 +400,11 @@
             <properties>
                 <environment>dev</environment>
                 <web.port>8080</web.port>
+                <db.svc>localhost</db.svc>
+                <db.user>sa</db.user>
+                <db.password>24QZzi?|</db.password>
+                <db.port>5432</db.port>
+                <db.name>gs</db.name>
             </properties>
         </profile>
         <profile>
