--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,14 +2,14 @@
 <web-app version="4.0" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://www.oracle.com/webfolder/technetwork/jsc/xml/ns/javaee/web-app_4_0.xsd">
     <display-name>gs</display-name>
     <!--
-    There are three means to configure Wickets configuration mode and they 
+    There are three means to configure Wickets configuration mode and they
     are tested in the order given.
-    
-    1) A system property: -Dwicket.configuration 
-    2) servlet specific <init-param> 
+
+    1) A system property: -Dwicket.configuration
+    2) servlet specific <init-param>
     3) context specific <context-param>
 
-    The value might be either "development" (reloading when templates change) or 
+    The value might be either "development" (reloading when templates change) or
     "deployment". If no configuration is found, "development" is the default. -->
     <!--context-param>
         <param-name>context-root</param-name>
@@ -27,21 +27,31 @@
         <filter-name>wicket.gs</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping -->
+    <data-source>
+        <!--  environment-specific properties applied using maven-war-plugin Webapp resource filtering -->
+        <name>java:global/jdbc/gsDataSource</name>
+        <class-name>org.postgresql.xa.PGXADataSource</class-name>
+        <server-name>${db.svc}</server-name>
+        <port-number>5432</port-number>
+        <database-name>${db.name}</database-name>
+        <user>${db.user}</user>
+        <password>${db.password}</password>
+    </data-source>
     <session-config>
         <session-timeout>20</session-timeout>
     </session-config>
-    <resource-ref>
+    <!--resource-ref>
         <description>Datasource for embeded db</description>
         <res-ref-name>jdbc/gsDataSource</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Application</res-auth>
         <res-sharing-scope>Unshareable</res-sharing-scope>
-        <!--properties>
+        <properties>
             <property name="driverClassName" value="org.h2.Driver"/>
             <property name="url" value="jdbc:h2:file:h2\db"/>
             <property name="username" value="sa"/>
             <property name="password" value=""/>
 
-        </properties-->
-    </resource-ref>
+        </properties>
+    </resource-ref-->
 </web-app>
