--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,8 @@
         <wtp.version>none</wtp.version>
         <version.jakartaee>8.0.0</version.jakartaee>
         <environment>noenv</environment>
-        <version.payara>5.201</version.payara>
-        <version.payara.micro>5.2021.4</version.payara.micro>
+        <version.payara>5.2021.4</version.payara>
+        <!--version.payara.micro>5.2021.4</version.payara.micro-->
         <version.postgresql>9.1-901.jdbc4</version.postgresql>
     </properties>
     <dependencies>
@@ -301,11 +301,20 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>UTF-8</encoding>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.2</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
                 </configuration>
             </plugin>
             <plugin>
@@ -358,6 +367,7 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--
             <plugin>
                 <groupId>fish.payara.maven.plugins</groupId>
                 <artifactId>payara-micro-maven-plugin</artifactId>
@@ -374,21 +384,22 @@
                     <deployWar>true</deployWar>
                     <commandLineOptions>
                         <option>
-                            <key>--autoBindHttp</key>
+                            <key> hyphenhyphen autoBindHttp</key>
                         </option>
                         <option>
-                            <key>--deploy</key>
+                            <key> hyphenhyphen deploy</key>
                             <value>${project.build.directory}/${project.build.finalName}</value>
                         </option>
                         <option>
-                            <key>--port</key>
+                            <key>hyphenhyphenport</key>
                             <value>${web.port}</value>
                         </option>
                     </commandLineOptions>
                 </configuration>
                 <version>1.4.0</version>
 
-            </plugin>
+</plugin>
+            -->
         </plugins>
     </build>
     <profiles>
