--- a/pom.xml
+++ b/pom.xml
@@ -176,15 +176,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>jakarta.platform</groupId>
-            <artifactId>jakarta.jakartaee-api</artifactId>
-            <scope>provided</scope>
-            <version>${version.jakartaee}</version>
-        </dependency>
+       
 
         <!-- CDI UNIT TESTING DEPENDENCIES -->
-        <dependency>
+        <!--dependency>
             <groupId>org.jglue.cdi-unit</groupId>
             <artifactId>cdi-unit</artifactId>
             <version>4.1.0</version>
@@ -196,12 +191,18 @@
             <artifactId>cdi-unit-junit5</artifactId>
             <version>0.4</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
+        </dependency-->
+        <!--dependency>
             <groupId>jakarta.enterprise</groupId>
             <artifactId>jakarta.enterprise.cdi-api</artifactId>
-            <version>3.0.0</version>
+            <version>2.0.2</version>
             <type>jar</type>
+        </dependency-->
+        <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <scope>provided</scope>
+            <version>${version.jakartaee}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
@@ -211,20 +212,19 @@
             <version>3.1.9.Final</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.jboss.weld.module</groupId>
             <artifactId>weld-web</artifactId>
             <version>3.1.9.Final</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.jboss.weld</groupId>
             <artifactId>weld-junit5</artifactId>
             <version>2.0.2.Final</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
@@ -260,7 +260,7 @@
             <artifactId>postgresql</artifactId>
             <version>${version.postgresql}</version>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>org.apache.deltaspike.core</groupId>
             <artifactId>deltaspike-core-api</artifactId>
             <version>1.9.5</version>
@@ -283,7 +283,7 @@
             <artifactId>deltaspike-jpa-module-impl</artifactId>
             <version>1.9.5</version>
             <scope>test</scope>
-        </dependency>
+        </dependency-->
     </dependencies>
     <build>
         <resources>
