--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,10 @@
         <!--version.payara.micro>5.2021.4</version.payara.micro-->
         <version.postgresql>9.1-901.jdbc4</version.postgresql>
     </properties>
+    
+    <!-- DEPENDENCY MANAGEMENT -->
+   
+
     <dependencies>
         <!--  WICKET DEPENDENCIES -->
         <dependency>
@@ -192,6 +196,14 @@
             <version>0.4</version>
             <scope>test</scope>
         </dependency-->
+        <!--dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <version>2.0.SP1</version>
+            <scope>test</scope>
+        </dependency-->
+
+        
         <dependency>
             <groupId>jakarta.enterprise</groupId>
             <artifactId>jakarta.enterprise.cdi-api</artifactId>
@@ -202,12 +214,12 @@
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
             <scope>provided</scope>
-            <version>${version.jakartaee}</version>
+            <version>8.0.0</version>
         </dependency>
         <dependency>
-            <groupId>org.jboss.weld.se</groupId>
+            <groupId>org.jboss.weld</groupId>
             <!-- or weld-se -->
-            <artifactId>weld-se-core</artifactId>
+            <artifactId>weld-core-impl</artifactId>
             <!-- Your preferred Weld version: -->
             <version>3.1.9.Final</version>
             <scope>test</scope>
@@ -218,6 +230,7 @@
             <version>3.1.9.Final</version>
             <scope>test</scope>
         </dependency>
+      
         <dependency>
             <groupId>org.jboss.weld</groupId>
             <artifactId>weld-junit5</artifactId>
@@ -239,13 +252,13 @@
         <dependency>
             <groupId>javax.el</groupId>
             <artifactId>javax.el-api</artifactId>
-            <version>3.0.0</version>
+            <version>2.2.5</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.web</groupId>
             <artifactId>javax.el</artifactId>
-            <version>2.2.6</version>
+            <version>2.2.5</version>
             <scope>test</scope>
         </dependency>
 
@@ -289,47 +302,8 @@
             <version>1.9.5</version>
             <scope>test</scope>
         </dependency-->
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>org.eclipse.persistence.core</artifactId>
-            <version>2.7.9</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>org.eclipse.persistence.asm</artifactId>
-            <version>9.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>org.eclipse.persistence.antlr</artifactId>
-            <version>2.7.9</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>org.eclipse.persistence.jpa</artifactId>
-            <version>2.7.9</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>org.eclipse.persistence.jpa.jpql</artifactId>
-            <version>2.7.9</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>org.eclipse.persistence.moxy</artifactId>
-            <version>2.7.9</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>javax.persistence</artifactId>
-            <version>2.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
-            <version>2.7.9</version>
-            <scope>provided</scope>
-        </dependency>
+        
+      
     </dependencies>
     <build>
         <resources>
