added com.googlcode.wicket-jquery, wicket-jquery and  kendo-ui libraries to the class path,  to enable use of datatable

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,16 @@
             <artifactId>wicket-auth-roles</artifactId>
             <version>${wicket.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.wicket-jquery-ui</groupId>
+            <artifactId>wicket-jquery-ui</artifactId>
+            <version>${wicket.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.wicket-jquery-ui</groupId>
+            <artifactId>wicket-kendo-ui</artifactId>
+            <version>${wicket.version}</version>
+        </dependency>
 
         <!-- LOGGING DEPENDENCIES - SLF4J-SIMPLE -->
         <dependency>
@@ -303,7 +313,6 @@
             <scope>test</scope>
         </dependency-->
         
-      
     </dependencies>
     <build>
         <resources>
