--- a/pom.xml
+++ b/pom.xml
@@ -84,17 +84,11 @@
             <artifactId>wicket-auth-roles</artifactId>
             <version>${wicket.version}</version>
         </dependency>
-        <!--dependency>
-            <groupId>com.googlecode.wicket-jquery-ui</groupId>
-            <artifactId>wicket-jquery-ui</artifactId>
+        <dependency>
+            <groupId>org.apache.wicket</groupId>
+            <artifactId>wicket-devutils</artifactId>
             <version>${wicket.version}</version>
-        </dependency-->
-        <!--dependency>
-            <groupId>com.googlecode.wicket-jquery-ui</groupId>
-            <artifactId>wicket-kendo-ui</artifactId>
-            <version>${wicket.version}</version>
-        </dependency-->
-
+        </dependency>
         <!-- LOGGING DEPENDENCIES - SLF4J-SIMPLE -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -354,8 +348,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>14</source>
-                    <target>14</target>
+                    <source>11</source>
+                    <target>11</target>
                     <encoding>UTF-8</encoding>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
